# Re-UOJ-Judger

./: .conf.json  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  install.sh  judge_client
.github/workflows/: ci.yml
lean/v4-23-0/: Answer.lean  build_static_libs.sh  compile_lean.sh  lakefile.toml
scripts/: setup-cgroup.sh
systemd/: uoj.slice
tests/: CMakeLists.txt  security_test.cpp
uoj_judger/: Makefile  data  main_judger.cpp
uoj_judger/builtin/judger/: judger.cpp  main_judger
uoj_judger/config/: checker.yaml
uoj_judger/config/languages/: Lean4.23.0.yaml  c.yaml  c11.yaml  c99.yaml  cpp.yaml  cpp11.yaml  cpp14.yaml  cpp17.yaml  cpp20.yaml  cpp23.yaml  cpp26.yaml  cpp98.yaml  d.yaml  fortran2018.yaml  fortran95.yaml  go.yaml  haskell.yaml  java11.yaml  java17.yaml  java21.yaml  java8.yaml  kotlin.yaml  pascal.yaml  pypy3.yaml  python2.yaml  python3.yaml  ruby.yaml  rust.yaml
uoj_judger/config/users/: compiler.yml  leancompile.yml  problem.yml  submission.yml  system.yml
uoj_judger/include/: uoj_judger_new.h  uoj_work_path.h
uoj_judger/include/core/: compiler.h  config.h  error.h  judger_logger.h  language.h  language_loader.h  logger.h  result.h  runner.h  sandbox_config.h  syscall_map.h  syscall_policy.h  system.h  types.h  user.h  user_loader.h  utils.h  yaml_config.h
uoj_judger/include/languages/: all.h
uoj_judger/include/sandbox/: cgroup.h  namespace.h  sandbox.h  seccomp.h  worker.h
